2014-08-08 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Update manual wrt Unicode.
	* common.c: Update help message for option -m.

2014-08-06 Erwin Waterlander <waterlan@xs4all.nl>
	* New option -v, --verbose: Print extra information about
	  number of converted line breaks and BOMs.

2014-08-05 Erwin Waterlander <waterlan@xs4all.nl>
	* New option -u, --keep_utf16: Keep UTF-16 encoding of the
	  input file. This prevents transformation to UTF-8.

2014-08-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.6

2014-08-03 Enrique Lazcorreta Puigmartí <enrique.lazcorreta@gmail.com>
	* po/es.po : Updated Spanish translation of messages.
	* man/es/man1/dos2unix.po : Updated Spanish translation of manual.

2014-07-12 Various authors
	* po/*.po, man/*/man1/*.po: Update translations.
	  See README.txt for details.

2014-07-12 Yuri Kozlov <yuray@komyakino.ru>
	* po/ru.po: Update Russian translation of messages.

2014-07-09 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c: Option -r also disables option
	  -m (add BOM).

2014-07-07 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c, common.c: New options -b (keep BOM)
	  and -r (remove BOM).

2014-07-06 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c: Bug fix mac2unix conversion of UTF-16 files.
	  Mac to Unix conversion produced corrupted output.
	  Thanks to report of Alan S. Jones.

2014-05-24  Åka Sikrom <a4@hush.com>
	* po/nb.po: New Norwegian Bokmaal translation.

2014-05-17 Mario Blättermann <mario.blaettermann@gmail.com>
	* po/de.po: Update German messages.

2014-05-12 Erwin Waterlander <waterlan@xs4all.nl>
	* INSTALL.txt: Updated for building 64-bit applications
	  with Microsoft Visual C++ Express.

2014-05-12 Frédéric Marchal <fmarchal@perso.be>
	* man/fr/man1/dos2unix.po: Fixed minor translation error.

2014-04-23 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/Makefile: Removed dependency on GNU sed.
	  Thanks to Daniel Macks.